--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ locale                   : "en-US"
 title                    : "Página Personal"
 title_separator          : "-"
 name                     : &name "Reiner Cruz Manrique"
-description              : &description " Hola"
+description              : &description " Profile"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "ReinerCruz/reinercruz.github.io"
+repository               : "reinercruz/reinercruz.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
