--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Página Personal"
 title_separator          : "-"
 name                     : &name "Reiner Cruz Manrique"
 description              : &description " Profile"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://reinercruz.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "ReinerCruz.github.io"
+repository               : "reinercruz.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
