--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Reiner Cruz Manrique "
-  avatar           : "profile.png"
+  avatar           : "foto_png.png"
   bio              : <body style=»text-align: justify;»> "Egresado destacado de la Pontificia Universidad Católica del Perú con conocimientos en Microeconomía, Econometría y manejo de base de datos. Mis intereses en investigación son desarrollo social, educación y políticas públicas en Perú.  Indicadores altos de liderazgo, investigación, capacidad analítica y trabajo en equipo."</body>
   location         : "Location"
   employer         :
