--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Reiner Cruz Manrique"
   avatar           : "foto_png.png"
   bio              : "Egresado destacado de la Pontificia Universidad Católica del Perú con conocimientos en Microeconomía, Econometría y manejo de base de datos. Mis intereses en investigación son desarrollo social, educación y políticas públicas en Perú.  Indicadores altos de liderazgo, investigación, capacidad analítica y trabajo en equipo."
-  location         : "Tacna, Tacna, Perú"
+  location         : "Tacna, Perú"
   employer         :
   email            : "a20196816@pucp.edu.pe"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
