--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Reiner Cruz Manrique"
   avatar           : "foto_png.png"
-  bio              : <p align="center"> "Bachiller destacado (quinto superior) de la Pontificia Universidad Católica del Perú"</p>
+  bio              : <p align="center"> Bachiller destacado (quinto superior) de la Pontificia Universidad Católica del Perú</p>
   location         : "Tacna, Perú"
   employer         :
   email            : "a20196816@pucp.edu.pe"
